--- a/ExamManager/.settings/org.eclipse.core.resources.prefs
+++ b/ExamManager/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/bkhn/gui/GuiManageObject.java=UTF-8
 encoding//src/com/bkhn/gui/GuiStart.java=UTF-8
