--- a/ExamManager/.classpath
+++ b/ExamManager/.classpath
@@ -2,11 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/KI20171/OOP/Project/Git/ExamManager/sqljdbc42.jar"/>
-	<classpathentry kind="lib" path="D:/KI20171/OOP/Project/Git/ExamManager/poi-3.17/poi-3.17.jar"/>
-	<classpathentry kind="lib" path="D:/KI20171/OOP/Project/Git/ExamManager/poi-3.17/poi-ooxml-3.17.jar"/>
-	<classpathentry kind="lib" path="D:/KI20171/OOP/Project/Git/ExamManager/poi-3.17/poi-ooxml-schemas-3.17.jar"/>
-	<classpathentry kind="lib" path="D:/KI20171/OOP/Project/Git/ExamManager/poi-3.17/ooxml-lib/curvesapi-1.04.jar"/>
-	<classpathentry kind="lib" path="D:/KI20171/OOP/Project/Git/ExamManager/poi-3.17/ooxml-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="/QuanLyBanHang/poi-ooxml-3.17-beta1.jar"/>
+	<classpathentry kind="lib" path="F:/BTL OOP/QuanLyBanHang/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
